@@ -42,6 +42,8 @@
 #include "qwebpage_p.h"
 #include "qwebframe_p.h"
 
+#include <qtooltip.h>
+
 namespace WebCore
 {
 
@@ -337,8 +339,14 @@ void ChromeClientQt::setToolTip(const String &tip)
 {
 #ifndef QT_NO_TOOLTIP
     QWidget* view = m_webPage->view();
-    if (view)
-        view->setToolTip(tip);
+    QString dtip = tip;
+    if (!tip.isEmpty())
+        dtip = QLatin1String("<p>") + tip + QLatin1String("</p>");
+    if (view) {
+        view->setToolTip(dtip);
+        if (tip.isEmpty())
+            QToolTip::hideText();
+    }
 #else
     Q_UNUSED(tip);
 #endif
